services page image compress

--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -573,7 +573,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/seo.jpeg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/digital/seo.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -592,7 +592,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/pay.jpeg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/digital/pay.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -610,7 +610,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/social.jpeg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/digital/social.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -629,7 +629,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/content.jpeg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/digital/content.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -649,7 +649,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/mail.jpeg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/digital/mail.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
