--- a/game-development-services.html
+++ b/game-development-services.html
@@ -567,7 +567,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/game/Game Design Framework.png"
+                                    <img src="assets/img/service/game/Game Design Framework.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -586,7 +586,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/game/Art and Animation.png"
+                                    <img src="assets/img/service/game/Art and Animation.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -621,7 +621,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/game/Game Design Framework.png"
+                                    <img src="assets/img/service/game/Game Design Framework.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -640,7 +640,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/game/Testing and Quality.png"
+                                    <img src="assets/img/service/game/Testing and Quality.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -658,7 +658,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/game/Deployment.png" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/game/Deployment.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
