--- a/mobile-app-development-services.html
+++ b/mobile-app-development-services.html
@@ -588,7 +588,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Mobile Application Development/User Interface (UI) Design.png"
+                                    <img src="assets/img/service/Mobile Application Development/User Interface (UI) Design.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -607,7 +607,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Database Management.png"
+                                    <img src="assets/img/service/IT Specialist/Database Management.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -627,7 +627,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png"
+                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -646,7 +646,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Testing.png"
+                                    <img src="assets/img/service/Software Development/Testing.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -665,7 +665,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Deployment.png"
+                                    <img src="assets/img/service/Software Development/Deployment.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -685,7 +685,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Maintenance & Updates.png"
+                                    <img src="assets/img/service/Software Development/Maintenance & Updates.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
