images compress all services page

--- a/content-creater.html
+++ b/content-creater.html
@@ -600,120 +600,7 @@
                     </div>
 
                 </div>
-                <div class="row g-4 horizontal-card">
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Keyword Research.png"
-                                        class="img-fluid rounded-start" alt="img">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Keyword Research</h5>
-                                        <span class="card-text">Identifying and analyzing the most relevant and
-                                            high-traffic keywords to target for improving search engine rankings.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/On-Page SEO.png" class="img-fluid rounded-start"
-                                        alt="img">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">On-Page SEO</h5>
-                                        <span class="card-text">Optimizing individual web pages through proper use of
-                                            meta tags, headings, content, internal links, and URL structure for better
-                                            search visibility.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service//SEO/Technical SEO.png" class="img-fluid rounded-start"
-                                        alt="img">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Technical SEO</h5>
-                                        <span class="card-text">Ensuring the website is search engine-friendly by
-                                            optimizing site speed, mobile responsiveness, crawlability, indexing, and
-                                            structured data.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Content Optimization.png"
-                                        class="img-fluid rounded-start" alt="img">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Content Optimization
-                                        </h5>
-                                        <span class="card-text">Creating and refining high-quality, keyword-rich content
-                                            that is engaging and valuable to users while adhering to SEO best practices.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Link Building.png" class="img-fluid rounded-start"
-                                        alt="img">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Link Building</h5>
-                                        <span class="card-text">Acquiring high-quality backlinks from authoritative
-                                            websites to improve domain authority and search engine rankings.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Analytics and Reporting.png"
-                                        class="img-fluid rounded-start" alt="img">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Analytics and Reporting</h5>
-                                        <span class="card-text">Monitoring and analyzing website performance using tools
-                                            like Google Analytics and Search Console to track traffic, rankings, and SEO
-                                            campaign effectiveness.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
+                <div class="row" style="margin-top: 20px;">
                     <div class="col-md-12">
                         <div class="service__details__planning__heading mb-4" data-aos="fade-up" data-aos-duration="1500">
                             <h2>The Digital Minds On Approach</h2>
