--- a/network-services.html
+++ b/network-services.html
@@ -582,7 +582,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Technical Support.png"
+                                    <img src="assets/img/service/IT Specialist/Technical Support.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -600,7 +600,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Network Administration.png"
+                                    <img src="assets/img/service/IT Specialist/Network Administration.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -618,7 +618,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/System Administration.png"
+                                    <img src="assets/img/service/IT Specialist/System Administration.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -636,7 +636,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Security Management.png"
+                                    <img src="assets/img/service/IT Specialist/Security Management.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -656,7 +656,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Database Management.png"
+                                    <img src="assets/img/service/IT Specialist/Database Management.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -674,7 +674,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png"
+                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
