--- a/seo-services.html
+++ b/seo-services.html
@@ -638,7 +638,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Keyword Research.png"
+                                    <img src="assets/img/service/SEO/Keyword Research.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -656,7 +656,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/On-Page SEO.png" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/SEO/On-Page SEO.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -674,7 +674,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service//SEO/Technical SEO.png" class="img-fluid rounded-start"
+                                    <img src="assets/img/service//SEO/Technical SEO.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -693,7 +693,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Content Optimization.png"
+                                    <img src="assets/img/service/SEO/Content Optimization.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -712,7 +712,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Link Building.png" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/SEO/Link Building.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -730,7 +730,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/SEO/Analytics and Reporting.png"
+                                    <img src="assets/img/service/SEO/Analytics and Reporting.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
