--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -572,7 +572,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Interaction Design.png"
+                                    <img src="assets/img/service/UIUX/Interaction Design.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -590,7 +590,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Prototyping.png" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/UIUX/Prototyping.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -607,7 +607,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Usability Testing.png"
+                                    <img src="assets/img/service/UIUX/Usability Testing.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -625,7 +625,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/User Research.png" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/UIUX/User Research.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -644,7 +644,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Visual Design.png" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/UIUX/Visual Design.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -663,7 +663,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/UIUX/Wireframing.png" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/UIUX/Wireframing.webp" class="img-fluid rounded-start"
                                         alt="img">
                                 </div>
                                 <div class="col-md-8">
