--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -575,7 +575,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/WordPress Specialist/Theme Development.png" alt="img">
+                                    <img src="assets/img/service/WordPress Specialist/Theme Development.webp" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -593,7 +593,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/WordPress Specialist/Plugin Development.png"
+                                    <img src="assets/img/service/WordPress Specialist/Plugin Development.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -611,7 +611,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/WordPress Specialist/Website Optimization.png"
+                                    <img src="assets/img/service/WordPress Specialist/Website Optimization.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -630,7 +630,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Content cretor/Content Creation.png"
+                                    <img src="assets/img/service/Content cretor/Content Creation.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -650,7 +650,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/WordPress Specialist/Security Management.png"
+                                    <img src="assets/img/service/WordPress Specialist/Security Management.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -669,7 +669,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/WordPress Specialist/SEO Optimization.png"
+                                    <img src="assets/img/service/WordPress Specialist/SEO Optimization.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
