home or blog image webp convert

--- a/blog.html
+++ b/blog.html
@@ -298,7 +298,7 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
-            style="background: url(assets/img/herobaner/blog-img.png);">
+            style="background: url(assets/img/herobaner/blog-img.webp);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
@@ -439,7 +439,7 @@
                                         <li>
                                             <a href="what-is-web-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/Web-blog.png" alt="img"
+                                                    <img src="assets/img/blog/Web-blog.webp" alt="img"
                                                         style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
@@ -452,7 +452,7 @@
                                         <li>
                                             <a href="what-is-mobile-application-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/app-blog.png" alt="img"
+                                                    <img src="assets/img/blog/app-blog.webp" alt="img"
                                                         style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
@@ -466,7 +466,7 @@
                                         <li>
                                             <a href="what-is-software-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/Software.png" alt="img"
+                                                    <img src="assets/img/blog/Software.webp" alt="img"
                                                         style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
@@ -538,7 +538,7 @@
                                 data-aos-duration="1500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/app-blog.png" alt="image">
+                                        <img src="assets/img/blog/app-blog.webp" alt="image">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">08 May, 2024</span></p>
@@ -561,7 +561,7 @@
                                 data-aos-duration="1700">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/Software.png" alt="image">
+                                        <img src="assets/img/blog/Software.webp" alt="image">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">10 May, 2024</span></p>
@@ -584,7 +584,7 @@
                                 data-aos-duration="1900">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/Web-blog.png" alt="image">
+                                        <img src="assets/img/blog/Web-blog.webp" alt="image">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">11 May, 2024</span></p>
