--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@
 
                     <div class="blog__single" data-aos="fade-up" data-aos-duration="1500">
                         <div class="blog__img">
-                            <img src="assets/img/blog/app-blog.png" alt="img">
+                            <img src="assets/img/blog/app-blog.webp" alt="img">
                         </div>
                         <div class="blog__date">
                             <div class="blog__date__inner">
@@ -1422,7 +1422,7 @@
 
                     <div class="blog__single" data-aos="fade-up" data-aos-duration="1800">
                         <div class="blog__img">
-                            <img src="assets/img/blog/Software.png" alt="img">
+                            <img src="assets/img/blog/Software.webp" alt="img">
                         </div>
                         <div class="blog__date">
                             <div class="blog__date__inner">
@@ -1451,7 +1451,7 @@
 
                     <div class="blog__single" data-aos="fade-up" data-aos-duration="2100">
                         <div class="blog__img">
-                            <img src="assets/img/blog/Web-blog.png" alt="img">
+                            <img src="assets/img/blog/Web-blog.webp" alt="img">
                         </div>
                         <div class="blog__date">
                             <div class="blog__date__inner">
